# KeyboardHelper

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable-anydpi/: ic_action_back.xml
app/src/main/res/layout/: activity_keyboard.xml  activity_keyboard2.xml  activity_keyboard3.xml  activity_main.xml  activity_main1.xml  activity_second.xml  content_main.xml  content_second.xml  fragment_content_main.xml  item_recyclerview.xml  item_viewpager.xml
app/src/main/res/transition/: tt.xml
app/src/main/res/values/: attrs.xml  strings.xml  styles.xml
app/src/main/res/xml/: keyboard_collapse.xml  keyboard_expand_to_keyboard.xml  keyboard_expand_to_panel.xml
gradle/wrapper/: gradle-wrapper.properties
mediabox/: build.gradle
mediabox/src/main/: AndroidManifest.xml
mediabox/src/main/cpp/: CMakeLists.txt  FrameSequenceJNI.cpp
mediabox/src/main/res/drawable/: background_share_stroke.xml  ic_round_check_24.xml  ic_round_check_circle_24.xml  ic_round_check_circle_24_c.xml  ic_round_photo_camera_24.xml  ic_round_uncheck_circle_24.xml  media_type_tag_background.xml  select_media_bucket_bottom_sheet_background.xml  selector_media_check_icon.xml  selector_media_origin_size_icon.xml  selector_media_select_count_background.xml  selector_preview_done_background.xml  selector_preview_done_text_color.xml
mediabox/src/main/res/drawable-anydpi/: ic_action_back.xml
mediabox/src/main/res/drawable-mdpi/: selector_preview_done_text_color.xml
mediabox/src/main/res/layout/: activity_main.xml  (+6 more)
(+67 files in other folders)
